--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: screenshot_callback_pro
-description: screenshot_callback_pro
-version: 0.0.1
+description: screenshot_callback_pro,No permission required, just call back directly.This library is very user-friendly.
+version: 0.0.2
 homepage: https://github.com/LiuDongCai/screenshot_callback_pro
 
 environment:
